@@ -32,6 +32,7 @@
   rotate.rownames=getOption("xtable.rotate.rownames", FALSE),
   rotate.colnames=getOption("xtable.rotate.colnames", FALSE),
   booktabs = getOption("xtable.booktabs", FALSE),
+  scalebox = getOption("xtable.scalebox", NULL),
   ...)}
 \arguments{
   \item{x}{An object of class \code{"xtable"}.}
@@ -70,6 +71,7 @@
   \item{rotate.rownames}{If \code{TRUE}, the row names are displayed vertically in LaTeX.}
   \item{rotate.colnames}{If \code{TRUE}, the column names are displayed vertically in LaTeX.}
   \item{booktabs}{If \code{TRUE}, the \code{toprule}, \code{midrule} and \code{bottomrule} tags from the LaTex "booktabs" package are used rather than \code{hline} for the horizontal line tags.}
+  \item{scalebox}{If not \code{NULL}, a \code{scalebox} clause will be added around the tabular environment with the specified value used as the scaling factor.}
   \item{...}{Additional arguments.  (Currently ignored.)}
 }
 \details{
