@@ -13,13 +13,14 @@
   * Added "booktabs" argument to use the "\toprule", "\midrule", and  
     "\bottomrule" tags from the Latex "booktabs" package rather than
 	using "\hline" for all horizontal lines.
+  * Added "scalebox" argument to include a "\scalebox" clause around
+    the tabular environment with the specified value used as the
+    scaling factor.	
   * Changed the "print.xtable()" arguments to use "getOption()"
     to check the options for a default value.  This was suggested
 	since "print.xtable()" has a lot of arguments that the user
 	will typically leave unchanged between tables.
   * Added an "is.null()" check on the "table.placement" argument.
-  * Added an example of header and footer specification with longtable
-    to the vignette.  
   * Added examples using the new arguments to the vignette.
 	
 1.6-0 (2011-10-07)
